# dynamic_chain_of_conditions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: Organization.cpp  Organization.h  condition.cpp  condition.h  condition_functions.h
test_json_files/: condition1.json  condition2.json  organization.json
